--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,7 @@
 <html> 
 <head>
     <title>First Class on CS50</title></head><body> 
-    Hello World</body>
+    Hello World
+    <marquee> randon line of code</marquee></body>
 
 </html>
